# llm-chatbot

./: .gitignore  Prompts.py  README.md  main.py  pyproject.toml
classes/: CountryCodes.py  Llm.py  NewsRetriever.py  TestToSpeechV2.py  TextToSpeech.py
classes/text_to_speech/: TestToSpeechV2.py  TextToSpeech.py
classes/utils/: audio.py
tests/data/: mock_llm_response.py
