[tool.poetry]
name = "llm-news-retriever"
version = "0.1.0"
description = ""
authors = ["Joe Gilbert <joegilbertdev@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
langchain-ollama = "^0.2.0"
python-dotenv = "^1.0.1"
black = "^24.10.0"
torch = "^2.5.1"
playsound = "^1.3.0"
tortoise-tts = "^3.0.0"
torchaudio = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
